# sdv_platform_drone

./: .gitattributes  .gitignore  README.md  SETUP_ENV.md  Tips.md
docs/: SDV_PLATFORM_IMPLEMENTATION_AND_DEMO_REPORT.md  SENTINEL_SWARM_DEVELOPMENT_PLAN.docx
src/attack_node/: package.xml  setup.py
src/attack_node/attack_node/: attack_node.py
src/battery_ecu/: package.xml  setup.cfg  setup.py
src/battery_ecu/battery_ecu/: battery_node.py
src/diagnostics_ecu/: package.xml  setup.cfg  setup.py
src/diagnostics_ecu/diagnostics_ecu/: diagnostics_node.py
src/diagnostics_ecu/resource/: diagnostics_ecu
src/drone_avoidance/: package.xml  setup.py
src/drone_avoidance/drone_avoidance/: avoidance_node.py  potential_field.py
src/drone_avoidance/test/: test_potential_field.py
src/drone_bringup/: package.xml  setup.py
src/drone_bringup/launch/: drone.launch.py  phase2_navigation.launch.py  phase3_perception.launch.py
src/drone_interfaces/: CMakeLists.txt  package.xml
src/drone_interfaces/msg/: LocalizationStatus.msg
src/drone_localization/: package.xml  setup.cfg  setup.py
src/drone_localization/drone_localization/: ekf.py  gps_monitor.py  localization_node.py
src/drone_localization/test/: test_ekf.py  test_gps_monitor.py
src/drone_offboard/: package.xml  setup.cfg  setup.py
src/drone_offboard/drone_offboard/: offboard_node.py  pid.py
src/drone_offboard/test/: test_pid.py
src/drone_perception/: package.xml  setup.cfg  setup.py
src/drone_perception/drone_perception/: detection_geometry.py  perception_node.py
src/drone_perception/test/: test_detection_geometry.py
src/motor_ecu/: package.xml  setup.cfg  setup.py
src/motor_ecu/motor_ecu/: motor_driver.py  motor_node.py
src/sdv_bringup/: package.xml  setup.cfg  setup.py
src/sdv_bringup/launch/: sdv_system.launch.py
src/sdv_interfaces/: CMakeLists.txt  package.xml
src/sdv_interfaces/action/: GoToTarget.action  ReturnHome.action
src/sdv_interfaces/msg/: BatteryStatus.msg  DiagnosticEvent.msg  Heartbeat.msg  MotorStatus.msg  ObstacleInfo.msg  SecurityEvent.msg  VehicleState.msg
src/sdv_interfaces/srv/: CalibrateSensor.srv  ClearFault.srv  GetFaultInfo.srv
src/sdv_test_gui/: package.xml  setup.cfg  setup.py
src/sdv_test_gui/sdv_test_gui/: test_gui_node.py
src/security_ecu/: package.xml  setup.cfg  setup.py
src/security_ecu/security_ecu/: security_node.py
src/sensor_ecu/: package.xml  setup.cfg  setup.py
src/sensor_ecu/sensor_ecu/: sensor_driver.py  sensor_node.py
src/swarm_agent/: package.xml  setup.cfg  setup.py
src/swarm_agent/swarm_agent/: agent_node.py
src/swarm_attacker/: package.xml  setup.cfg  setup.py
src/swarm_attacker/swarm_attacker/: attacker_node.py
src/swarm_bringup/: package.xml  setup.py
src/swarm_bringup/launch/: swarm_coordination.launch.py  swarm_security.launch.py
src/swarm_consensus/: package.xml  setup.cfg  setup.py
src/swarm_consensus/swarm_consensus/: consensus_node.py
src/swarm_coordination/: package.xml  setup.cfg  setup.py
src/swarm_coordination/swarm_coordination/: allocation.py  collision.py  coverage.py
src/swarm_coordination/test/: test_coordination.py
src/swarm_ids/: package.xml  setup.cfg  setup.py
src/swarm_ids/swarm_ids/: ids_node.py
src/swarm_interfaces/: CMakeLists.txt  package.xml
src/swarm_interfaces/msg/: ConsensusVote.msg  SecurityAlert.msg  SignedPose.msg  SwarmHeartbeat.msg  SwarmStatus.msg
src/swarm_security/: package.xml  setup.cfg  setup.py
src/swarm_security/swarm_security/: secoc.py
src/swarm_security/test/: test_secoc.py
src/swarm_viz/: package.xml  setup.cfg  setup.py
src/swarm_viz/rviz/: sentinel_swarm.rviz
src/swarm_viz/swarm_viz/: viz_node.py
src/vehicle_manager/: package.xml  setup.py
src/vehicle_manager/vehicle_manager/: vehicle_manager_node.py
