<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swarm_bringup</name>
  <version>0.0.0</version>
  <description>Integrated launch for the Sentinel Swarm Phase 5 security layer.</description>
  <maintainer email="owljun2@gmail.com">seokjunkang</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>swarm_agent</exec_depend>
  <exec_depend>swarm_ids</exec_depend>
  <exec_depend>swarm_consensus</exec_depend>
  <exec_depend>swarm_attacker</exec_depend>
  <exec_depend>swarm_viz</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
